# BlogStudio

./: CNAME  Cargo.toml  config.json  index.css  index.html  index.js  template.html
.github/workflows/: publish.yml
2022/01/01/: newlycreated.html
2022/02/13/: testpage.html
2022/03/03/: hogehoge.html  hogehoge4.html  testpage2.html
BlogStudio/: .gitignore  BlogStudio.csproj  BlogStudio.sln  FileSystemWatcherExtensions.cs  Fragment.cs  Generate.cs  Helpers.cs  IndexableExpandoObject.cs  JsonConverters.cs  Layout.cs  Page.cs  Post.cs  Program.cs  Watch.cs
BlogStudio/Properties/: launchSettings.json
articles/: Exprazor.md
assets/: index.css
fragments/: menu.html
layouts/: default.html  post.html
pages/: CategoryPages.html  index.html
posts/: 2022-01-01-newlycreated.md  2022-02-13-testpage.md  2022-03-03-testpage2.md  index.md
publish/: VirtualDOMの作り方.html  index.css  mikuto.txt  profile.html  rain.css
publish/2022/01/01/: newlycreated.html
publish/2022/02/13/: testpage.html
publish/2022/03/03/: hogehoge.html  hogehoge3.html  hogehoge4.html  hogehoge5.html  testpage2.html
publish/articles/: Exprazor.html
publish/mogemoge/: index.html
src/: main.rs
wwwroot/: index.html  index.js  template.html
wwwroot/2022/01/01/: newlycreated.html
wwwroot/2022/02/13/: testpage.html
wwwroot/2022/03/03/: hogehoge4.html  testpage2.html
wwwroot/articles/: index.html
wwwroot/mogemoge/: index.html
