[package]
edition = "2018"
name = "blog"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
ctrlc = "3.2.1"
notify = "4.0.17"
pulldown-cmark = "0.9.0"
regex = "1.5.4"
tokio = {version = "1.16.1", features = ["full"]}
warp = "0.3.2"
yaml-rust = "0.4.5"
